# viki_pub

./: Cargo.toml  README.md
src/: get_dynamic.rs  get_semidynamic.rs  get_static.rs  main.rs  send_http.rs  tray_icon.rs
src/get_dynamic/: get_html.rs
