[package]
name = "VikiOnline"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = {version = "0.11" , features = ["blocking"]}
uptime_lib = "0.2.1"
fs2 = "0.4.3"
native-windows-gui = "1.0.12"
ureq = {version="2.5.0", features=["json"]}
eventual = "0.1.7"
chrono = "0.4.20"
dateparser = "0.1.6"

[replace]
"winapi:0.3.9" = {git = 'https://github.com/retep998/winapi-rs'}
